# tovbase

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pending-tasks.md  product-spec.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  db.py  main.py  models.py  schemas.py  workers.py
app/api/: routes.py
app/services/: cache.py  company_scoring.py  crawler.py  enrichment.py  ingestion.py  rate_limit.py  scoring.py  scraper.py  similarity.py  topics.py  vector.py
extension/: background.js  content.js  discovery.js  manifest.json  options.html  options.js  popup.html  popup.js  scrapers.js  styles.css
scripts/: seed.py  seed_feeds.py  setup_browsers.py
tests/: conftest.py  test_claiming.py  test_company_scoring.py  test_enrichment.py  test_ingestion.py  test_personas.py  test_rate_limit.py  test_scoring.py  test_similarity.py  test_topics.py  test_vector.py
web/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vitest.config.ts
web/__tests__/components/: PlatformBadge.test.tsx  ScoreBadge.test.tsx  SearchBar.test.tsx  TierLabel.test.tsx
web/__tests__/lib/: api.test.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/badge/[handle]/: route.ts
web/app/claim/[handle]/: page.tsx
web/app/profile/[handle]/: loading.tsx  page.tsx
web/app/topics/: page.tsx
web/components/: PlatformBadge.tsx  ScoreBadge.tsx  SearchBar.tsx  SignalBar.tsx  TabPanel.tsx  TierLabel.tsx
web/lib/: api.ts
(+3 files in other folders)
